[package]
name = "komainu"
version = "0.3.568-dev"
license = "FSL-1.1-ALv2"
edition = "2021"

[features]

fail-on-warnings = []

[dependencies]

thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
p256 = { workspace = true }
pkcs8 = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
rust_decimal = { workspace = true }
