[project]
name = "tap-sumsubapi"
version = "0.0.1"
description = "Singer tap for SumsubApi, built with the Meltano Singer SDK."
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[tool.poetry]

[tool.poetry.dependencies]
singer-sdk = { version="~=0.43.1", extras = [] }
requests = "~=2.32.4"
psycopg2-binary = "2.9.10"

[build-system]
requires = ["poetry-core>=2,<3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-sumsubapi = 'tap_sumsubapi.tap:TapSumsubApi.cli'
